--- a/Templates.ipynb
+++ b/Templates.ipynb
@@ -118,9 +118,7 @@
   {
    "cell_type": "markdown",
    "id": "9bc3827e",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Linking to another website image"
    ]
@@ -128,9 +126,7 @@
   {
    "cell_type": "markdown",
    "id": "14bf204c",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "___\n",
     "\n",
@@ -143,9 +139,104 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a6e1e727",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af933ba4",
+   "metadata": {},
+   "source": [
+    "# Adding HTML Information "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9e10dbe",
+   "metadata": {},
+   "source": [
+    "<table>\n",
+    "\n",
+    "<thead >\n",
+    "<tr>\n",
+    "<th>\n",
+    "<p>Syntax to pass to the .select() method</p>\n",
+    "</th>\n",
+    "<th>\n",
+    "<p>Match Results</p>\n",
+    "</th>\n",
+    "</tr>\n",
+    "</thead>\n",
+    "<tbody>\n",
+    "<tr>\n",
+    "<td>\n",
+    "<p><code>soup.select('div')</code></p>\n",
+    "</td>\n",
+    "<td>\n",
+    "<p>All elements with the <code>&lt;div&gt;</code> tag</p>\n",
+    "</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>\n",
+    "<p><code>soup.select('#some_id')</code></p>\n",
+    "</td>\n",
+    "<td>\n",
+    "<p>The HTML element containing the <code>id</code> attribute of <code>some_id</code></p>\n",
+    "</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>\n",
+    "<p><code>soup.select('.notice')</code></p>\n",
+    "</td>\n",
+    "<td>\n",
+    "<p>All the HTML elements with the CSS <code>class</code> named <code>notice</code></p>\n",
+    "</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>\n",
+    "<p><code>soup.select('div span')</code></p>\n",
+    "</td>\n",
+    "<td>\n",
+    "<p>Any elements named <code>&lt;span&gt;</code> that are within an element named <code>&lt;div&gt;</code></p>\n",
+    "</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>\n",
+    "<p><code>soup.select('div &gt; span')</code></p>\n",
+    "</td>\n",
+    "<td>\n",
+    "<p>Any elements named <code class=\"literal2\">&lt;span&gt;</code> that are <span><em >directly</em></span> within an element named <code class=\"literal2\">&lt;div&gt;</code>, with no other element in between</p>\n",
+    "</td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "\n",
+    "</tr>\n",
+    "</tbody>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c081347",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "642f6de7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ab852b8",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
