--- a/12-Advanced Python Modules/ExcerciseAndNotes/01-Opening-and-Reading-Files-Folders.ipynb
+++ b/12-Advanced Python Modules/ExcerciseAndNotes/01-Opening-and-Reading-Files-Folders.ipynb
@@ -8,23 +8,20 @@
     "\n",
     "<a href='https://www.udemy.com/user/joseportilla/'><img src='../Pierian_Data_Logo.png'/></a>\n",
     "___\n",
-    "<center><em>Content Copyright by Pierian Data</em></center>"
+    "<center><em>Content Copyright by Pierian Data</em></center>\n",
+    "<center><em>Video : 105 - 0 Opening And Reading Files And Folders  Python Os Module-1 </em></center>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Opening and Reading Files"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "So far we've discussed how to open files manually, one by one. Let's explore how we can open files programatically. "
    ]
@@ -32,8 +29,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "source": [
     "_____"
@@ -42,9 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -64,45 +58,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "# Review: Understanding File Paths"
+    "## Review: Understanding File Paths ."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "pwd"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "# Create Practice File"
+    "## Create Practice File ."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "f = open('practicefile.txt','w')"
@@ -111,9 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -133,9 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "f.close()"
@@ -144,35 +124,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We will begin by creating a practice text file that we will be using for demonstration."
    ]
@@ -183,7 +155,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "# Getting Directories"
+    "## Getting Directories ."
    ]
   },
   {
@@ -256,7 +228,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "# Listing Files In A Directory"
+    "## Listing Files In A Directory ."
    ]
   },
   {
@@ -311,7 +283,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "# Moving Files"
+    "## Moving Files ."
    ]
   },
   {
@@ -454,7 +426,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "# Deleting Files"
+    "## Deleting Files ."
    ]
   },
   {
@@ -480,14 +452,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "# Walking through a directory"
+    "## Walking through a directory ."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "\n",
     "\n",
@@ -497,7 +473,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -518,7 +496,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "mycurrentdir='C:\\\\Users\\\\SONY\\\\Documents\\\\GitHub\\\\\\\n",
@@ -528,7 +508,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -548,7 +530,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -568,7 +552,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -620,34 +606,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Notes"
    ]
@@ -655,7 +651,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "source": [
     "___\n",
@@ -666,7 +663,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -680,7 +677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
