--- a/Templates.ipynb
+++ b/Templates.ipynb
@@ -33,11 +33,69 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03a6f9a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44a93ca7",
+   "metadata": {},
+   "source": [
+    "# Heading Styles , Page title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "98a76402",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3739341851.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [2]\u001b[1;36m\u001b[0m\n\u001b[1;33m    <a href='https://www.udemy.com/user/joseportilla/'><img src='../Pierian_Data_Logo.png'/></a>\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "___\n",
+    "\n",
+    "<a href='https://www.udemy.com/user/joseportilla/'><img src='../Pierian_Data_Logo.png'/></a>\n",
+    "___\n",
+    "<center><em>Content Copyright by Pierian Data</em></center>\n",
+    "<h1><center><em>Collections Module</em></center></h1>\n",
+    "<h3><center><em>Video: Section 14 Advanced Python Modules</em></center></h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2e2293e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (586788955.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [5]\u001b[1;36m\u001b[0m\n\u001b[1;33m    <h1> <span style='color:Yellow'><center> <em>Collections Module</em></center> </span></h1>\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "<h1> <span style='color:Yellow'><center> <em>Collections Module</em></center> </span></h1>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f30fde95",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Formatting Guide\n",
     "\n",
@@ -47,10 +105,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f65bda66",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f2382e31",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -109,7 +173,9 @@
   {
    "cell_type": "markdown",
    "id": "9bc3827e",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Linking to another website image"
    ]
@@ -117,7 +183,9 @@
   {
    "cell_type": "markdown",
    "id": "14bf204c",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "___\n",
     "\n",
@@ -130,14 +198,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a6e1e727",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "af933ba4",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Adding HTML Information "
    ]
@@ -145,7 +217,9 @@
   {
    "cell_type": "markdown",
    "id": "d9e10dbe",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "<table>\n",
     "\n",
@@ -211,7 +285,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5c081347",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -219,7 +295,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "642f6de7",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -227,7 +305,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1ab852b8",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
